--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,16 @@
 config:
   scaling: 1.25
 
+videos:
+  ids:
+    - 6
+    - 7
+    - 8
+    - 11
+    - 12
+    - 13
+  num: 6
+
 participants:
   0:
     control: false
